istio/istio-1.2.2/istio-zipkin-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-zipkin
  namespace: istio-system
spec:
  rules:
  - host: istio-zipkin.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin
          servicePort: 9411
